--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,22 +1,20 @@
 {% set version = "0.36.0" %}
-{% set name = "azure-storage" %}
 
 package:
-  name: {{ name|lower }}
+  name: azure-storage
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/a/azure-storage/azure-storage-{{ version }}.tar.gz
   sha256: fb6212dcbed91b49d9637aa5e8888eafdfcd523b7e560c8044d2d838bbd3ca5f
 
 build:
-  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
   number: 1000
+  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   host:
     - python
-    - setuptools
     - pip
   run:
     - python
@@ -42,6 +40,7 @@ test:
 about:
   home: https://github.com/Azure/azure-storage-python
   license: Apache-2.0
+  license_file: LICENSE.txt
   summary: 'Microsoft Azure Storage Client Library for Python'
 
 extra:
